--- a/zad2/conf/application.conf
+++ b/zad2/conf/application.conf
@@ -1,2 +1,8 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.hosts.allowed = ["."]
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
+play.filters.cors {
+        allowedOrigins = [".ngrok-free.app", "localhost:9000"]
+        allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
+}
