Add Google OAuth2 (4.0)

--- a/zad8/server/.env
+++ b/zad8/server/.env
@@ -1,1 +1,4 @@
 JWT_SECRET=TwojSuperTajnyKlucz
+GOOGLE_CLIENT_ID=264467573380-mp38cfvb89rlpahbttv41sg7p45rau0p.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:8000/api/auth/google/callback
