--- a/zad8/server/package.json
+++ b/zad8/server/package.json
@@ -13,10 +13,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.14.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
