--- a/zad8/server/package.json
+++ b/zad8/server/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.37.7",
