--- a/zad5/docker-compose.yml
+++ b/zad5/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   server_app:
     build:
       context: ./server
+    image: szymonpawelfortuna/zad5-server_app:latest
     ports:
       - "8080:8080"
     networks:
@@ -10,6 +11,7 @@ services:
   client_app:
     build:
       context: ./client
+    image: szymonpawelfortuna/zad5-client_app:latest
     ports:
       - "3000:3000"
     networks:
