--- a/zad5/.github/workflows/build.yml
+++ b/zad5/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Backend and Frontend
+name: Build and Notify
 
 on:
   push:
@@ -11,28 +11,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.20
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
 
-    - name: Build Go Backend
-      working-directory: ./server
-      run: go build -v -o app .
+      - name: Build backend
+        run: |
+          cd server
+          go build -o app .
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Build frontend
+        run: |
+          cd client
+          npm install
+          npm run build
 
-    - name: Install dependencies and build frontend
-      working-directory: ./client
-      run: |
-        npm install
-        npm run build
-
-    - name: Show folder structure
-      run: ls -R
+      - name: Send email notification
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.wp.pl
+          server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: GitHub Actions - Build ${{ job.status }} for ${{ github.repository }}
+          body: |
+            The GitHub Actions build finished with status: **${{ job.status }}**
+            Repo: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+            Triggered by: ${{ github.actor }}
+          to: s.fortuna@student.uj.edu.pl
+          from: GitHub Actions <${{ secrets.EMAIL_USERNAME }}>
