--- a/.github/workflows/build-and-notify.yml
+++ b/.github/workflows/build-and-notify.yml
@@ -1,48 +1,44 @@
-name: Build and Notify
+name: Build with Docker Compose & Deploy to Azure
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          go-version: '1.21'
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build backend
+      - name: Build and tag Docker images via docker-compose
         run: |
-          cd zad5/server
-          go build -o app .
+          cd zad5
+          docker-compose build
+          docker tag zad5-server_app szymonpawelfortuna/backend:latest
+          docker tag zad5-client_app szymonpawelfortuna/frontend:latest
 
-      - name: Build frontend
+      - name: Push Docker images to Docker Hub
         run: |
-          cd zad5/client
-          npm install
-          npm run build
+          docker push szymonpawelfortuna/backend:latest
+          docker push szymonpawelfortuna/frontend:latest
 
-      - name: Send email notification
-        if: always()
-        uses: dawidd6/action-send-mail@v3
+      - name: Deploy backend container to Azure
+        uses: azure/webapps-deploy@v2
         with:
-          server_address: smtp.wp.pl
-          server_port: 465
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: GitHub Actions - Build ${{ job.status }} for ${{ github.repository }}
-          body: |
-            The GitHub Actions build finished with status: **${{ job.status }}**
-            Repo: ${{ github.repository }}
-            Commit: ${{ github.sha }}
-            Triggered by: ${{ github.actor }}
-          to: fortunaszymon@wp.pl
-          from: GitHub Actions <${{ secrets.EMAIL_USERNAME }}>
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
+          images: 'szymonpawelfortuna/backend:latest'
+
+      - name: Deploy frontend container to Azure
+        uses: azure/webapps-deploy@v2
+        with:
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
+          images: 'szymonpawelfortuna/frontend:latest'
