Add deployment by GH actions (4.5)

--- a/.github/workflows/build-and-notify.yml
+++ b/.github/workflows/build-and-notify.yml
@@ -19,7 +19,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and tag Docker images via docker-compose
+      - name: Build and tag Docker images via docker compose
         run: |
           cd zad5
           docker-compose build
