--- a/.github/workflows/build-and-notify.yml
+++ b/.github/workflows/build-and-notify.yml
@@ -25,7 +25,7 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
 
-      - name: Build and tag Docker images via docker-compose
+      - name: Build and tag Docker images via docker compose
         run: |
           cd zad5
           docker-compose build
